--- a/public/css/style.css
+++ b/public/css/style.css
@@ -326,25 +326,40 @@ li {
     color: var(--color-blue-second);
     background-color: var(--color-white-principal);
     padding: 0;
-    /* color: #00ff88; */
 }
 
+
+
+
+
+
+
+
+
 /* Cards de Projetos */
-.project-cards {
+
+.section-projects{
+    display: flex;
+    flex-direction: column;
+}
+
+.project-cards{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
+    grid-template-columns: repeat(2, 400px);
+    gap: 4rem;
+}
+.project-cards {
 }
 
 
 /* Continuação dos Cards de Projetos */
 .card {
-    background-color: #333;
+    background-color: #202020;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     transition: transform 0.3s ease;
+    box-shadow: var(--boxshadow-color);
 }
 
 .card img {
@@ -357,6 +372,7 @@ li {
 .card h3 {
     margin-top: 15px;
     color: #00ff88;
+    font-size: var(--font-size-large);
 }
 
 .card p {
@@ -369,14 +385,12 @@ li {
     margin-top: 10px;
     padding: 10px 20px;
     border-radius: 20px;
-    background-color: #00ff88;
-    color: #1e1e1e;
     font-weight: bold;
-    transition: background-color 0.3s ease;
+    transition: .4s ease;
 }
 
 .card a:hover {
-    background-color: #00cc70;
+    scale: 1.01;
 }
 
 .card:hover {
