--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,10 +34,10 @@
 
 
     /*======================================== SHADOW ========================================*/
-    --boxshadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    --boxshadow: 0 4px 8px 0 rgba(0, 162, 255, 0.2), 0 6px 20px 0 rgba(0, 183, 255, 0.19);
     --boxshadow6: rgba(0, 174, 255, 0.2) 0px 2px 8px 0px;
     --boxshadow22: rgba(50, 76, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    --boxshadow-color: rgba(46, 179, 240, 0.4) -5px 5px, rgba(46, 169, 240, 0.3) -10px 10px, rgba(46, 179, 240, 0.2) -15px 15px, rgba(46, 169, 240, 0.1) -20px 20px, rgba(46, 169, 240, 0.05) -25px 25px;
+    --boxshadow-color: rgba(46, 153, 240, 0.4) 5px 5px, rgba(46, 162, 240, 0.3) 10px 10px, rgba(46, 169, 240, 0.2) 15px 15px, rgba(46, 162, 240, 0.1) 20px 20px, rgba(46, 169, 240, 0.05) 25px 25px;
 
 
     --padding-btn: 10px 30px;
@@ -347,10 +347,7 @@ li {
     display: grid;
     grid-template-columns: repeat(2, 400px);
     gap: 4rem;
-}
-.project-cards {
-}
-
+} 
 
 /* Continuação dos Cards de Projetos */
 .card {
@@ -371,7 +368,7 @@ li {
 
 .card h3 {
     margin-top: 15px;
-    color: #00ff88;
+    color: var(--color-blue-principal);
     font-size: var(--font-size-large);
 }
 
