--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,8 +150,14 @@ li {
 
 
 /*======================================== HEADER ========================================*/
-.nav-menu {
+
+
+.hamburger {
     display: none;
+    border: none;
+    background: none;
+    border-top: 3px solid var(--color-white-principal);
+    cursor: pointer;
 }
 
 .nav-logo a {
@@ -208,7 +214,9 @@ li {
     transition: .4s;
 }
 
-
+li .fecharmenu {
+    display: none;
+}
 
 /*======================================== SECTION HERO ========================================*/
 .section-home {
@@ -612,10 +620,93 @@ footer p {
 
 @media screen and (max-width: 1280px) {
     header {
+        position: fixed;
         justify-content: space-around;
         padding-inline: 1rem;
     }
 
+    .hamburger {
+        display: block;
+        z-index: 99;
+    }
+
+    .nav-list {
+        position: fixed;
+        height: 100vh;
+        top: 0;
+        left: -100%;
+        background-color: var(--color-dark-principal);
+        flex-direction: column;
+        justify-content: center;
+        width: 100vw;
+        pointer-events: none;
+        transition: 1s all;
+    }
+
+    header .nav-list li {
+        padding: 1rem;
+        width: 100vw;
+        text-align: center;
+    }
+
+    .nav_header.active .nav-list {
+        left: 0;
+        pointer-events: all;
+    }
+
+    header .nav-list li:nth-child(1) a{
+        transition: 1.5s .2s;
+    }
+    header .nav-list li:nth-child(2) a{
+        transition: 1.5s .4s;
+    }
+    header .nav-list li:nth-child(3) a{
+        transition: 1.5s .6s;
+    }
+    header .nav-list li:nth-child(4) a{
+        transition: 1.5s .8s;
+    }
+    header .nav-list li:nth-child(5) a{
+        transition: 1.5s 1s;
+    }
+
+    header .nav-list .nav-link {
+        font-size: var(--font-size-large);
+        padding: 1rem;
+        width: 100vw;
+        opacity: 0;
+    }
+
+    
+    .nav_header.active .nav-list a{
+        opacity: 1;
+    }
+
+    .hamburger::before,
+    .hamburger::after {
+        content: " ";
+        display: block;
+        width: 30px;
+        height: 3px;
+        margin-top: 7px;
+        background: var(--color-white-principal);
+        position: relative;
+        transition: .4s;
+    }
+
+    .nav_header.active .hamburger{
+        position: fixed;
+        top: 26px;
+        left: 16px;
+        border-top-color: transparent;
+    }
+    .nav_header.active .hamburger::before{
+        transform: rotate(135deg);
+    }
+    .nav_header.active .hamburger::after{
+        transform: rotate(-135deg);
+        top: -7px;
+    }
     .container {
         padding: 3rem 6rem;
     }
@@ -624,25 +715,12 @@ footer p {
         padding-top: 6rem;
     }
 
-    .nav-menu {
-        display: flex;
-        justify-content: flex-start;
-        flex: 1;
 
-    }
-
-    .nav-menu i {
-        font-size: var(--font-size-anormal);
-    }
 
     .nav-logo {
         display: flex;
         justify-content: center;
         flex: 1;
-    }
-
-    .nav-list {
-        display: none;
     }
 
     .nav-extras {
@@ -651,9 +729,6 @@ footer p {
         flex: 1;
     }
 
-    header .nav-extras p {
-        display: none;
-    }
 
     .nav-extras .whats {
         padding: .5rem;
